<resources>
    <string name="app_name" translatable="false">DigiDoctor</string>
    <string name="exit_text">Press again to exit</string>
    <string name="twilio_secret" translatable="false">cmj63bgYS5eSlzi1TlMMJEBptpR4HKBN</string>
    <string name="twilio_sid" translatable="false">SKc36ec8ca9b6bb130bf96111475492cb0</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="permissionMessage">Allow Permissions</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_new_here">Are you new here?</string>
    <string name="login_with">Login with</string>
    <string name="otp_that_we_send_to_your_mobile"><b>OTP</b> that we send to your mobile</string>
    <string name="mobile_no">Mobile number</string>
    <string name="get_otp">Get OTP</string>
    <string name="click_on_get_otp_to_">Click on <b>Get OTP</b> to receive <b>OTP</b> to your registered <b>Mobile No.</b></string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="password_you_created">Password that you created previously</string>
    <string name="register">Register</string>
    <string name="after_entering_above">After entering above field click <b>Get OTP</b> to receive <b>OTP</b> on your mobile number</string>
    <string name="get_registered">Get Registered</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="already_a_user"><u>Already a user?</u></string>
    <string name="enterMobileNo">Enter mobile number</string>
    <string name="enterPassword">Enter Password</string>
    <string name="noInternetConnection">No Internet Connection</string>
    <string name="full_name">Full Name</string>
    <string name="dob">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enterFullName">Enter full name</string>
    <string name="enterValidMobile">Enter valid mobile number</string>
    <string name="enterDob">Enter date of birth</string>
    <string name="selectGender">Select gender</string>
    <string name="registration_success_message">Registration successful</string>
    <string name="otp_sent">OTP sent successfully</string>
    <string name="loginSuccess">Login successfully</string>
    <string name="set_location">Set Location</string>
    <string name="find_doctors_hospitals">Find Doctors/Hospitals</string>
    <string name="appointments">Appointments</string>
    <string name="medical_records">Medical Records</string>
    <string name="select_any_one_from_given_options">Select answer from given options</string>
    <string name="select_any_from_given_options">Select answer(s) from given options</string>
    <string name="select_current_symptoms">Select current symptoms</string>
    <string name="search_amp_add_symptoms"><![CDATA[Search & add symptoms]]></string>
    <string name="select_symptoms">Select symptoms</string>
    <string name="analyze_symptoms">Analyze Symptoms</string>
    <string name="emergency">Emergency</string>
    <string name="we_will_call">We will call you as soon as possible!</string>
    <string name="for_emergency_click_this_button">For emergency click this button</string>
    <string name="risk_result">Risk</string>
    <string name="consult_doctor">Consult Doctor</string>
    <string name="please_select_at_least">Please select at least one symptom</string>
    <string name="select_consult_type">Select Consult Type</string>
    <string name="consult_on_call">Consult on call</string>
    <string name="visit_to_doctor">Visit to doctor</string>
    <string name="find_hospitals_clinics">Find Hospitals/Clinics</string>
    <string name="era_s_lucknow_medical_college_amp_hospital"><![CDATA[ERA\'s Lucknow Medical College & Hospital]]></string>
    <string name="consult_to">Consult to</string>
    <string name="patient_details">Patient Details</string>
    <string name="patient_full_name">Patient full name*</string>
    <string name="mobile_no_">Mobile No.*</string>
    <string name="select">Select</string>
    <string name="date_of_appointment">Date of Appointment*</string>
    <string name="select_time_slot">Select Time Slot*</string>
    <string name="select_time_slot_">Select time slot</string>
    <string name="guardian_name">Guardian Name*</string>
    <string name="select_district">Select District*</string>
    <string name="select_state">Select State*</string>
    <string name="select_state_">Select State</string>
    <string name="select_district_">Select District</string>
    <string name="address">Address</string>
    <string name="visit_details">Visit Details</string>
    <string name="pincode">Pincode</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="select_country">Select Country*</string>
    <string name="select_country_">Select Country</string>
    <string name="enter_guardian_name">Enter Guardian Name</string>
    <string name="enter_patient_name">Enter Patient Name</string>
    <string name="select_date_of_appointment">Select date of appointment</string>
    <string name="side_effects_checker">Side Effects Checker</string>
    <string name="find_labs_stores">Find Labs/Stores</string>
    <string name="online_nconsultation_appointment">Online Consultation</string>
    <string name="add_manually">Add Prescription</string>
    <string name="ongoing_medication">Ongoing Medication</string>
    <string name="prescription">Prescription</string>
    <string name="rx_history">RX History</string>
    <string name="investigations">Investigations</string>
    <string name="travel_history">Travel History</string>
    <string name="doctor_hospital">Doctor/Hospital</string>
    <string name="diagnosis_provisional_diagnosis">Diagnosis/Provisional Diagnosis</string>
    <string name="view">View</string>
    <string name="medication">Medication</string>
    <string name="advice">Advice</string>
    <string name="prescribed_medicine_list">Prescribed Medicine List</string>
    <string name="strength">Strength</string>
    <string name="unit">Unit</string>
    <string name="frequency">Frequency</string>
    <string name="duration">Duration (in days)</string>
    <string name="dose">Dose</string>
    <string name="consultation_history">Consultation History</string>
    <string name="submit_request">Submit Request</string>
    <string name="request_online_consultation">Request Online Consultation</string>
    <string name="get_online_appointment">Get Online Appointment</string>
    <string name="request_online_appointment">Request Online Appointment</string>
    <string name="alert">Alert!</string>
    <string name="thank_you_text">Thank you for requesting online consultation, our health experts will revert to you soon with prescription and advice.</string>
    <string name="thank_you_emergency">Our health expert will revert to you soon.</string>
    <string name="prescription_history">Prescription History</string>
    <string name="prescription_history_">Prescription\nHistory</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="consult">Consult</string>
    <string name="symptoms">Symptoms</string>
    <string name="screening">Screen yourself</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="my_appointments">My Appointments</string>
    <string name="my_appointments_">My\nAppointments</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="select_emergency">Select Emergency</string>
    <string name="accident">Accident</string>
    <string name="poisoning">Poisoning</string>
    <string name="snake_bite">Snake Bite</string>
    <string name="fainting">Fainting</string>
    <string name="chest_or_upper_abdominal_pain_or_pressure">Chest or upper abdominal pain or pressure</string>
    <string name="uncontrolled_bleeding">Uncontrolled bleeding</string>
    <string name="shortness_of_breath">Shortness of breath</string>
    <string name="please_select_emergency">Please select emergency</string>
    <string name="view_attachment">View Attachment</string>
    <string name="suggested_investigations">Suggested Investigations</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="medicine">Medicine</string>
    <string name="save">Save</string>
    <string name="dosage">Dose form</string>
    <string name="duration_days">Duration (days)</string>
    <string name="recommended_diet">Recommended Diet</string>
    <string name="food_to_be_avoided">Food to be avoided</string>
    <string name="other_diet">Other Diet</string>
    <string name="profile">Profile</string>
    <string name="profile_details">Profile Details</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_member">Add Member</string>
    <string name="emailId">Email Id</string>
    <string name="profile_updated_successful">Profile updated successfully</string>
    <string name="member_added_successful">Member added successfully</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="get_password">Get Password</string>
    <string name="password_sent">Password has been sent to your Mobile Number and Email Id successfully!</string>
    <string name="enter_registered_mobile_number_to_get_password">Enter registered Mobile Number to get password</string>
    <string name="select_patient">Select patient</string>
    <string name="search_other_doctor_or_department">Search other doctor or department</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="please_accept_terms"><![CDATA[Please accept Terms &amp; Conditions]]></string>
    <string name="enter_diagnosis">Enter Diagnosis</string>
    <string name="add_medicine_details">Add medicine details</string>
    <string name="presccription_added_successfully">Prescription added successfully</string>
    <string name="appointment_history">Appointment History</string>
    <string name="appointment">Appointment</string>
    <string name="date_of_appointment_">Date of Appointment</string>
    <string name="patient_name">Patient Name</string>
    <string name="view_prescription">View Prescription</string>
    <string name="investigation_history">Investigation History</string>
    <string name="investigation_history_">Investigation\nHistory</string>
    <string name="add_investigation">Add Investigation</string>
    <string name="spo2">SpO2</string>
    <string name="scan_pid">SCAN PID</string>
    <string name="pid">PID</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="connected">Connected</string>
    <string name="no_data">--</string>
    <string name="bluetooth_device_data">Bluetooth Device Data</string>
    <string name="label_device_address">Device Address</string>
    <string name="label_state">Status: </string>
    <string name="barcode">Bar Code</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="gender_here">Gender</string>
    <string name="your_dob">Date of Birth here</string>
    <string name="your_address">Address here</string>
    <string name="pulse_rate">Pulse Rate</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="search_pharmacy_hint">Search Medicine here</string>
    <string name="favourite">favourite</string>
    <string name="cart">cart</string>
</resources>