<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_refresh"
        android:checkable="false"
        android:orderInCategory="1"
        android:title="TODO"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_scan"
        android:orderInCategory="100"
        android:title="@string/menu_scan"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_stop"
        android:orderInCategory="101"
        android:title="@string/menu_stop"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/scan"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/barcode"
        app:showAsAction="always" />
</menu>